--- a/index.html
+++ b/index.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-        margin: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        background: #f0f0f0;
-    }
-    object {
-        border: 1px solid red;
-        height: 80%;
-        width: 80%;
-    }
-  </style>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="/css/style.css" rel="stylesheet">
 </head>
+
 <body>
-    <object id="map" type="image/svg+xml" data="map/map_test.svg"></object>
+
+	<p id="territoryText">-</p>
+
+	<!-- Le svg doit être mis ici : pas pratique -->
+    <svg viewBox="0 0 132.1 86.7" xmlns="http://www.w3.org/2000/svg">
+    	<g transform="translate(-19.3,-27.9)">
+
+        	<g id="Greenland">
+        		<path
+        			style="opacity:1;fill:#32a852;stroke:#000000;stroke-width:0"
+        			d="m42.4,56.9 -3,9.8 3.9,2.9 v-6 l4.4,2.1 4.2,10 -8.6,16.3 -5.5,-3.4 -2,7.7 5.2,1.2 6,8.5 5.9,-7.7 12.4,7.3 2.7,9 8.2,-7.5 4.4,-9.6 6.1,-3.8 11.1,-4.4 -5.8,-9.4 -4.3,-9 -1.2,-10.1 -0.2,-7.6 -13,1.2 L71,66 57.9,63.6 l-2.7,-2.8 -4.4,0.5 0.9,-2.6 4.7,-0.8 2.6,3 1.3,-2.5 -1,-9.1 -9.6,4.1 -1.3,-3.9 -3.3,2.4 1.3,4.3 z"
+        			id="path1" />
+        	</g>
+
+        	<g id="Blueland">
+        		<path
+        			style="opacity:1;fill:#3293a8;stroke:#000000;stroke-width:0"
+        			d="m86.3,53.2 0.2,7.6 0.6,5.05 0.6,5.05 2.15,4.5 2.15,4.5 2.9,4.7 2.9,4.7 8.3,1.6 1.9,8.6 -3,2.5 7.5,7 2,-2.7 2,-8.6 6.4,10.7 5.1,-6.9 11.3,-20.7 -6.4,-1 -5.5,4.4 -2.1,-5.1 -1.4,-5.7 1.4,-3.9 6.8,-1.3 3.6,-2.6 1.8,-4 -0.5,-4.9 4.4,4.3 2.2,3.6 -2.1,2 2.6,3.3 3.3,0.3 4,-13.1 -3.5,-4.7 -4,0.5 -2.6,-0.4 -1.3,-4.6 -6,-2.3 -6.5,2.7 -6.1,-2.7 -3,-8.1 -9.9,0.9 -4.4,6 -9.8,-7.8 3.9,-2.2 -0.8,-6.5 -12.1,1.4 0.5,4.2 2.1,4.6 5.5,5.9 -7.2,4.3 z"
+        			id="path2" />
+        		<path
+        			style="opacity:1;fill:#3293a8;stroke:#000000;stroke-width:0"
+        			d="m30.1,34.7 -10.8,5.5 2.9,9.1 3.5,-0.7 2.9,-5.2 2.6,5.7 4.8,-4.3 -1.4,-8.6 z"
+        			id="path3" />
+        	</g>
+
+    	</g>
+    </svg>
     <script src="js/main.js"></script>
 </body>
 </html>
